@@ -84,7 +84,8 @@ char *commands[] = {
     "print",  
     "probit",
     "pvalue",  
-    "quit",    
+    "quit",  
+    "reset",
     "rhodiff", 
     "rmplot",
     "run",
