@@ -82,7 +82,8 @@ typedef enum {
     PRINT, 
     PROBIT,
     PVALUE,  
-    QUIT,    
+    QUIT,  
+    RESET,
     RHODIFF, 
     RMPLOT,
     RUN,
